# schwab-options

./: .gitignore  README.md  accounts.py  api.py  app.py  authenticate.py  main.py  models.py  optimizer.py  package.json  pyproject.toml  read_token.py  refresh_token.py  requirements.txt  screener.py  screener_results_20260319_2114.csv  token.json  tool_call.py  ui.py  utils.py
api/: agent.py  app.py  auth.py  market.py  optimizer.py  position.py  transactions.py
broker/: __init__.py  accounts.py  authenticate.py  base.py  client.py  exceptions.py  logging_methods.py  market_data.py  refresh_token.py  token_provider.py
broker/auth/: __init__.py  authenticate.py  token_provider.py
broker/clients/: __init__.py  accounts.py  market_data.py
broker/data/: __init__.py
broker/http/: __init__.py  base.py
customagents/: brokerage_agents.py  functions.py  research_agents.py  tools.py
data/: account_data.py  market_data.py  option_data.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DataTable.jsx  (+2 more)
model/: account_models.py  market_models.py  models.py
service/: __init__.py  agent.py  market.py  optimizer.py  option_chain.py  position.py  research_agent.py  screener.py  tool_call.py  transactions.py
tests/: test_accounts.py
tools/: broker_tools.py  google_search_tool.py  optimizer.py
ui/: chat.py  market_data.py  option.py  position.py  screener.py  stock_allocation.py  transactions.py
utils/: __init__.py  read_token.py  utils.py
(+7 files in other folders)
