[project]
name = "options"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.29",
    "loguru>=0.7.3",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
