[project]
name = "options"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "langchain-community>=0.3.29",
    "openai>=1.102.0",
    "openai-agents>=0.2.10",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
