[project]
name = "options-wheel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "google-search-results>=2.4.2",
    "langchain-community>=0.3.29",
    "openai>=1.102.0",
    "openai-agents>=0.2.10",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytz>=2024.1",
    "redis>=5.0.0",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
